Viope_JS/Chapter8/8.1/README.md
# Doctor's Visit and Kela

One of the cottage retreat participants is hurt and needs to visit a private doctor. Kela pays back some part of the private medical treatment, e.g. of the doctor’s fee.

The maximum Kela reimbursement (Kela-korvaus) is decided based on the following table: 
```
-Doctor’s visit, no more than 10 min, 8.00 euros
-Doctor’s visit, no more than 20 min, 11.00 euros
-Doctor’s visit, no more than 30 min, 13.50 euros
-Doctor’s visit, no more than 45 min, 16.50 euros
-Doctor’s visit, more than 45 min, 21.00 euros
```
Make a function (1.), which gets the length of the visit as a parameter and returns the maximum Kela reimbursement. Convert the length to a number value with the parseInt() function before calculation.

Make a function (3.) that is called when the button is clicked. It naturally uses the function (1.). Use descriptive and long enough function and variable names.

Sample output for shown input:

![Doctor_visit](./07.06a.png)